🏄Fix rounded overflow drop shadow
Closes #169

--- a/src/css/components/UserBar.css
+++ b/src/css/components/UserBar.css
@@ -29,6 +29,7 @@
     display: flex;
     background: var(--color__brand-blue);
     box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
+    overflow: visible;
   }
 
   &__container {
